--- a/Code/1.html
+++ b/Code/1.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="./style1.css">
+        <link rel="stylesheet" href="./style2.css">
         <title> Portfolio </title>
     </head>
 
@@ -140,7 +140,7 @@
                 <a href="https://wa.me/+917558969090"><img src="./wa.png" alt="WhatsApp" width="50px" height="50px"></a>
             </div>
             <div class="x">
-                <a href="https://x.com/RonnSino?t=xe8d-8YITNh7eZjRbGjRUg&s=08"><img src="./x.png" alt="X(Twitter)" width="50px" height="50px"></a>
+                <a href="https://x.com/RonnSino?t=xe8d-8YITNh7eZjRbGjRUg&s=08"><img src="./x1.png" alt="X(Twitter)" width="50px" height="50px"></a>
             </div>
             <div class="snap">
                 <a href="https://www.snapchat.com/add/astronmath?share_id=E4d2YAfEqOs&locale=en-IN"><img src="./snap.png" alt="SnapChat" width="50px" height="50px"></a>
